--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,6 @@
 .header {
   /* border: 1px solid #000; */
+
   width: 1400px;
   height: 100px;
   margin: 0 auto;
@@ -7,6 +8,9 @@
 }
 .header-wrap {
   position: relative;
+  width: 100%;
+  background: white;
+  box-shadow: 0 4px 10px  rgba(0, 0, 0, 0.4);
 }
 .header-wrap::before {
   content: "";
@@ -15,7 +19,6 @@
   width: 100%;
   height: 1px;
   background: #ccc;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
 }
 .header-wrap .depth-bg {
   content: "";
