--- a/css/main.css
+++ b/css/main.css
@@ -16,10 +16,12 @@
 #visual {
   position: relative;
 }
+.ul-wrap {
+}
 .scroll li {
   /* display: none; */
   position: relative;
-  background-repeat: repeat;
+  /* background-repeat: repeat; */
   width: 100%;
   height: 676px;
   display: flex;
@@ -99,7 +101,8 @@
   position: absolute;
   display: flex;
   bottom: 20px;
-  left: 900px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .pagination-btn span {
   background: #ffffff;
