--- a/css/content.css
+++ b/css/content.css
@@ -3,7 +3,7 @@
 }
 .inner {
   width: 1400px;
-  margin: 100px auto;
+  margin: 0 auto;
   padding: 100px 0;
   position: relative;
 }
@@ -166,6 +166,7 @@ a {
 /* con2 */
 .con.content3 {
   width: 100%;
+  height: 800px;
 }
 .con.content3 h3 {
   display: block;
@@ -174,16 +175,33 @@ a {
 }
 .con.content3 .con3-wrap {
   display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
 .tv-box {
 }
 .tv-box a {
 }
 .tv-box a h4 {
+  width: 450px;
+  font-weight: 700;
+  font-size: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-bottom: 20px;
 }
 .tv-box .tag {
 }
 .tv-box li {
+  font-size: 18px;
+  font-weight: 300;
+  display: inline;
+  border: 1px solid #10216d;
+  border-radius: 30px;
+  padding: 8px 20px;
+  color: #10216d;
+  margin-right: 5px;
 }
 
 .tv-box .tvImg,
@@ -191,4 +209,11 @@ a {
   width: 450px;
   height: 260px;
   border: none;
+  margin-bottom: 20px;
+}
+.con.content3 .btn {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
