--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@
 }
 .arrow .inner {
   position: absolute;
-  top: 45%;
+  height: 100%;
   display: flex;
   justify-content: space-between;
   color: rgb(255, 255, 255);
