--- a/css/content.css
+++ b/css/content.css
@@ -217,3 +217,44 @@ a {
   left: 50%;
   transform: translateX(-50%);
 }
+/* con3 */
+.con.content4 {
+  width: 100%;
+  height: 800px;
+}
+.con.content4 .inner {
+  width: 1400px;
+}
+.con.content4 .grid-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.con.content4 .grid-wrap ul {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+.con.content4 .grid-wrap li {
+  width: 450px;
+  height: 300px;
+  border-radius: 30px;
+}
+.con.content4 .grid-wrap .item {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding: 50px 40px;
+}
+.con.content4 strong {
+  font-size: 26px;
+  font-weight: 600;
+}
+.con.content4 p {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.con.content4 .grid-wrap .grid-wrap2 li {
+  height: 630px;
+}
