--- a/css/ani.css
+++ b/css/ani.css
@@ -1,3 +1,51 @@
+.scroll li:nth-child(1) .text,
+.scroll li:nth-child(1) .text em,
+.scroll li:nth-child(1) .text span,
+.scroll li:nth-child(1) .text p {
+  opacity: 0;
+  transform: translateY(40px);
+  animation: slideUp 0.6s ease-out forwards;
+}
+
+.scroll li:nth-child(1) .text em {
+  animation-delay: 0.5s;
+}
+.scroll li:nth-child(1) .text span {
+  animation-delay: 0.7s;
+}
+
+.scroll li:nth-child(1) .text p {
+  animation-delay: 1s;
+}
+@keyframes slideUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.scroll li:nth-child(2) .text,
+.scroll li:nth-child(2) strong,
+.scroll li:nth-child(2) p {
+  opacity: 0;
+  transform: translateY(40px);
+  animation: slideUp 0.6s ease-out forwards;
+}
+
+.scroll li:nth-child(1) .text strong {
+  animation-delay: 0.5s;
+}
+
+.scroll li:nth-child(2) .text p {
+  animation-delay: 0.7s;
+}
+@keyframes slideUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* visual */
 .bimg,
 .ssimg,
 .social-wrap a,
