--- a/css/content.css
+++ b/css/content.css
@@ -167,6 +167,7 @@ a {
 .con.content3 {
   width: 100%;
   height: 800px;
+  padding-top: 100px;
 }
 .con.content3 h3 {
   display: block;
@@ -213,7 +214,7 @@ a {
 }
 .con.content3 .btn {
   position: absolute;
-  bottom: 0;
+  bottom: -100px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -221,6 +222,7 @@ a {
 .con.content4 {
   width: 100%;
   height: 800px;
+  padding-top: 100px;
 }
 .con.content4 .inner {
   width: 1400px;
@@ -258,3 +260,4 @@ a {
 .con.content4 .grid-wrap .grid-wrap2 li {
   height: 630px;
 }
+
