--- a/css/footer.css
+++ b/css/footer.css
@@ -52,11 +52,8 @@
 .foot-bottom .link-area p {
   margin-right: 20px;
 }
-.foot-bottom .copyright {
-}
-.tel-popup {
-  display: none;
 
+.tel-popup {
   background: #4b4b4b;
   color: #fff;
   padding: 30px 40px;
@@ -65,6 +62,12 @@
   top: -500px;
   left: 500px;
   translate: translateY(-50%);
+  opacity: 0;
+  transition: opacity 0.4s ;
+}
+.tel-popup.active {
+  opacity: 1;
+  visibility: visible;
 }
 .tel-popup .xi-close {
   position: absolute;
