--- a/css/header.css
+++ b/css/header.css
@@ -27,6 +27,7 @@
   top: 100%;
   width: 100%;
   height: 325px;
+  padding-top: 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   display: none;
 }
@@ -83,8 +84,9 @@
   top: 99%;
   left: 0;
   width: 100%;
-  height: 100px;
+  height: 60px;
   background: transparent;
+  /* background: red; */
   z-index: 99;
 }
 .header .depth1 .depth2 {
